--- a/app/src/main/res/layout/view_item_recycle_test.xml
+++ b/app/src/main/res/layout/view_item_recycle_test.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -7,6 +7,15 @@
         android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerVertical="true"
         android:layout_margin="10dp"/>
-</LinearLayout>
+    <View
+        android:id="@+id/view_controller"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:background="@color/teal_200"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"/>
+
+</RelativeLayout>
