--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/recycle_view"/>
 
+    <ListView
+        android:id="@+id/lv_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/recycle_view"
+        android:choiceMode="multipleChoice"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
