--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,12 @@
         app:layout_constraintTop_toBottomOf="@+id/recycle_view"
         android:choiceMode="multipleChoice"/>
 
+    <Button
+        android:id="@+id/test_button"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="ceshi"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
