--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -6,4 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity3">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            app:tabIndicatorColor="@color/purple_200"
+            app:tabMaxWidth="200dp"
+            app:tabMinWidth="100dp"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/teal_200" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout6"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/shape_tab_bg"
+            app:tabIndicator="@drawable/shape_full_tab_indicator"
+            app:tabIndicatorColor="@color/white"
+            app:tabIndicatorFullWidth="true"
+            app:tabIndicatorHeight="42dp"
+            app:tabMinWidth="96dp"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/purple_200"
+            app:tabTextColor="@color/black" />
+
+
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
