--- a/app/src/main/res/drawable/shape_tab_bg.xml
+++ b/app/src/main/res/drawable/shape_tab_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="999dp" />
-    <solid android:color="@color/teal_200" />
+    <corners android:radius="6dp" />
+    <solid android:color="#d6d6d6" />
 </shape>
