--- a/app/src/main/res/drawable/tab_layout_indicator_background.xml
+++ b/app/src/main/res/drawable/tab_layout_indicator_background.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:gravity="center" android:top="0.5dp" android:bottom="0.5dp">
+    <item
+        android:bottom="1.5dp"
+        android:gravity="center"
+        android:left="1.5dp"
+        android:right="1.5dp">
         <shape>
             <!-- 上下边距合计1dp 高度减少1dp -->
-            <size android:height="40dp" />
-            <corners android:radius="999dp" />
+            <size android:height="26dp" />
+            <corners android:radius="7dp" />
             <solid android:color="@color/white" />
         </shape>
     </item>
