调整项目实现

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,86 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.MainActivity">
-
-    <LinearLayout
+    android:layout_height="match_parent">
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#e5ffff"
-        android:padding="@dimen/dp8"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.test.view.TestView
-            android:id="@+id/bt_test"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@color/teal_200"
-            android:text="@string/app_name" />
-
-
-        <com.test.view.TestView1
-            android:id="@+id/bt_test1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="30dp"
-            android:background="@color/purple_200"
-            android:text="@string/app_name" />
-
-        <LinearLayout
+        android:layout_height="wrap_content">
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:orientation="vertical">
-            <com.test.coordinatorLayout.DependentView
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
-
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    app:layout_behavior="com.test.coordinatorLayout.FollowBehavior" />
-
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container_view"
-        android:name="com.ligh.base.NavigationFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/fragment_container_view" />
-
-    <ListView
-        android:id="@+id/lv_test"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:choiceMode="multipleChoice"
-        app:layout_constraintTop_toBottomOf="@+id/recycle_view" />
-
-    <androidx.constraintlayout.helper.widget.Flow
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="fragment_container_view,lv_test,recycle_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="100dp"
+            android:background="#222222"
+            android:gravity="center"
+            android:text="该区域可折叠"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            app:layout_scrollFlags="scroll" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#DD012D"
+            android:gravity="center"
+            android:text="该区域为上滑至头部固定区域"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+    </com.google.android.material.appbar.AppBarLayout>
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/recycle_view"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
