--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipChildren="false"
-    tools:context=".activity.MainActivity2">
+    tools:context=".activity.JavaActivity">
 
     <com.test.recycleview.TestRecycleView
         android:layout_width="match_parent"
