--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity3">
+    tools:context=".activity.TabLayoutActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
             app:tabSelectedTextColor="@color/purple_200"
             app:tabTextColor="@color/black" />
 
-        <com.ligh.google.tabs.TabLayout
+        <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab1"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
@@ -53,11 +53,11 @@
             app:tabRippleColor="@null"
             app:tabSelectedTextColor="@color/purple_200"
             app:tabTextColor="@color/black" />
-        
+
         <Button
             android:id="@+id/button1"
             android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp" />
     </LinearLayout>
 
 
